# mockeur

./: .gitignore  CMakeLists.txt  README.md
include/: AbstractCallEntry.hpp  ArgumentMatchers.hpp  CallEntryFactory.hpp  CallHandler.hpp  DefaultCallHandlerFactory.hpp  Mock.hpp  MockPolicy.hpp  Mockeur.hpp
include/ArgumentMatcher/: AbstractArgumentMatcher.hpp  ArgumentMatcher.hpp  FixedValueArgumentMatcher.hpp  TypeArgumentMatcher.hpp
include/internal/: AbstractCallHandler.hpp  ArgumentMatchers_impl.hpp  BaseArgumentMatcher.hpp  CallEntry.hpp  CallEntry_impl.hpp  DefaultMockPolicy.hpp  GenericCallEntryFactory.hpp
src/ArgumentMatcher/: ArgumentMatcher.cpp
test/: CMakeLists.txt  MockTest.cpp
test/include/: AlternativeMockPolicy.hpp  FtpClient.h
test/src/: FtpClient.c  MockTest.cpp
